fix(tailwind): configure Tailwind CSS v4 with Vite plugin

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
@@ -54,8 +55,7 @@
   "homepage": "https://github.com/lucas-murta/react-movie-db#readme",
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix",
-      "npm run typecheck"
+      "eslint --fix"
     ],
     "*.{js,jsx,ts,tsx,json,css,md}": [
       "prettier --write"
